cmake_minimum_required(VERSION 3.16)

find_package(OpenBLAS REQUIRED)
if (NOT OpenBLAS_FOUND)
    message(WARNING "openblas not found, will not compile some programs")
else()
    add_executable(process_used_time_stress process_used_time.c)
    target_compile_definitions(process_used_time_stress PRIVATE STRESS)
    target_include_directories(process_used_time_stress PRIVATE ${OpenBLAS_INCLUDE_DIRS})
    target_link_libraries(process_used_time_stress ${OpenBLAS_LIBRARIES})
endif()

project(processes)

add_executable(example1 example1.c)
add_executable(example2 example2.c)
add_executable(example3 example3.c)
add_executable(example4 example4.c)
add_executable(get_id get_id.c)
add_executable(fork_usage fork_usage.c)
add_executable(kill_signal_wait_usage kill_signal_wait_usage.c)
add_executable(process_used_time process_used_time.c)
add_executable(transWordC transWordClient.cpp)
add_executable(transWordS transWordServer.cpp)