cmake_minimum_required(VERSION 3.16)

find_package(OpenBLAS REQUIRED)
if (NOT OpenBLAS_FOUND)
    message(WARNING "openblas not found, will not compile some programs")
else()
    add_executable(process_used_time_stress process_used_time.c)
    add_executable(child_cal_pri_change child_cal_pri_change.c)
    add_executable(stress_mem stress_mem.c)
    target_compile_definitions(process_used_time_stress PRIVATE STRESS)
    target_include_directories(process_used_time_stress PRIVATE ${OpenBLAS_INCLUDE_DIRS})
    target_link_libraries(process_used_time_stress ${OpenBLAS_LIBRARIES})
    target_compile_definitions(child_cal_pri_change PRIVATE STRESS)
    target_include_directories(child_cal_pri_change PRIVATE ${OpenBLAS_INCLUDE_DIRS})
    target_link_libraries(child_cal_pri_change ${OpenBLAS_LIBRARIES})
    target_include_directories(stress_mem PRIVATE ${OpenBLAS_INCLUDE_DIRS})
    target_link_libraries(stress_mem ${OpenBLAS_LIBRARIES})
endif()

project(processes)

add_executable(example1 example1.c)
add_executable(example2 example2.c)
add_executable(example3 example3.c)
add_executable(example4 example4.c)
add_executable(get_id get_id.c)
add_executable(fork_usage fork_usage.c)
add_executable(kill_signal_wait_usage kill_signal_wait_usage.c)
add_executable(kill_signal_wait_usage_test kill_signal_wait_usage_test.c)
add_executable(process_used_time process_used_time.c)
add_executable(father_after_child_print1 father_after_child_print1.c)
add_executable(father_after_child_print2 father_after_child_print2.c)
add_executable(child_before_father_print child_before_father_print.c)
add_executable(child_find child_find.c)
add_executable(process_manage process_manage.c)
add_executable(transWordC transWordClient.cpp)
add_executable(transWordS transWordServer.cpp)
add_executable(print_sys_pagesize print_sys_pagesize.c)
add_executable(mmap_read_file mmap_read_file.c)
add_executable(mmap_less mmap_less.c)
add_executable(pipe_test1 pipe_test1.c)
add_executable(pipe_test2 pipe_test2.c)
add_executable(pipe_test3 pipe_test3.c)
add_executable(pipe_processes_connect pipe_processes_connect.c)
add_executable(pipe_write_p pipe_write_p.c)
add_executable(pipe_read_p pipe_read_p.c)